// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PricingPlan > renders with badge correctly 1`] = `
"<div data-orientation="vertical" data-slot="root">
  <!--v-if-->
  <div data-slot="body" class="">
    <div data-slot="titleWrapper" class="">
      <div data-slot="title" class="">Title</div><span data-slot="badge" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
      <!--v-if--></span>
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`PricingPlan > renders with badge object correctly 1`] = `
"<div data-orientation="vertical" data-slot="root">
  <!--v-if-->
  <div data-slot="body" class="">
    <div data-slot="titleWrapper" class="">
      <div data-slot="title" class="">Title</div><span data-slot="badge" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
      <!--v-if--></span>
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`PricingPlan > renders with billing cycle correctly 1`] = `
"<div data-orientation="vertical" data-slot="root">
  <!--v-if-->
  <div data-slot="body" class="">
    <div data-slot="titleWrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <div data-slot="priceWrapper" class="">
      <div data-slot="discount" class="">$249</div>
      <div data-slot="price" class="">$199</div>
      <div data-slot="billing" class=""><span data-slot="billingPeriod" class="">&nbsp;</span><span data-slot="billingCycle" class="">/month</span></div>
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`PricingPlan > renders with billing period correctly 1`] = `
"<div data-orientation="vertical" data-slot="root">
  <!--v-if-->
  <div data-slot="body" class="">
    <div data-slot="titleWrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <div data-slot="priceWrapper" class="">
      <div data-slot="discount" class="">$249</div>
      <div data-slot="price" class="">$199</div>
      <div data-slot="billing" class=""><span data-slot="billingPeriod" class="">billed annually</span>
        <!--v-if-->
      </div>
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`PricingPlan > renders with body slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root">
  <!--v-if-->
  <div data-slot="body" class="">Body slot</div>
  <div data-slot="footer" class="">
    <div data-slot="tagline" class="">Tagline</div>
    <!--v-if--><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Buy now</span>
      <!--v-if-->
    </button>
    <div data-slot="terms" class="">Terms</div>
  </div>
</div>"
`;

exports[`PricingPlan > renders with button correctly 1`] = `
"<div data-orientation="vertical" data-slot="root">
  <!--v-if-->
  <div data-slot="body" class="">
    <div data-slot="titleWrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <div data-slot="footer" class="">
    <!--v-if-->
    <!--v-if--><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Buy now</span>
      <!--v-if-->
    </button>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PricingPlan > renders with description correctly 1`] = `
"<div data-orientation="vertical" data-slot="root">
  <!--v-if-->
  <div data-slot="body" class="">
    <div data-slot="titleWrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div data-slot="description" class="">Description</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`PricingPlan > renders with discount correctly 1`] = `
"<div data-orientation="vertical" data-slot="root">
  <!--v-if-->
  <div data-slot="body" class="">
    <div data-slot="titleWrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <div data-slot="priceWrapper" class="">
      <div data-slot="discount" class="">$249</div>
      <div data-slot="price" class="">$199</div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`PricingPlan > renders with features slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root">
  <!--v-if-->
  <div data-slot="body" class="">
    <div data-slot="titleWrapper" class="">
      <div data-slot="title" class="">Title</div><span data-slot="badge" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
      <!--v-if--></span>
    </div>
    <div data-slot="description" class="">Description</div>
    <div data-slot="priceWrapper" class="">
      <div data-slot="discount" class="">$249</div>
      <div data-slot="price" class="">$199</div>
      <div data-slot="billing" class=""><span data-slot="billingPeriod" class="">billed annually</span><span data-slot="billingCycle" class="">/month</span></div>
    </div>
    <ul data-slot="features" class="">Features slot</ul>
  </div>
  <div data-slot="footer" class="">
    <div data-slot="tagline" class="">Tagline</div>
    <!--v-if--><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Buy now</span>
      <!--v-if-->
    </button>
    <div data-slot="terms" class="">Terms</div>
  </div>
</div>"
`;

exports[`PricingPlan > renders with price correctly 1`] = `
"<div data-orientation="vertical" data-slot="root">
  <!--v-if-->
  <div data-slot="body" class="">
    <div data-slot="titleWrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <div data-slot="priceWrapper" class="">
      <!--v-if-->
      <div data-slot="price" class="">$249</div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`PricingPlan > renders with tagline correctly 1`] = `
"<div data-orientation="vertical" data-slot="root">
  <!--v-if-->
  <div data-slot="body" class="">
    <div data-slot="titleWrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <div data-slot="footer" class="">
    <div data-slot="tagline" class="">Tagline</div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</div>"
`;

exports[`PricingPlan > renders with terms correctly 1`] = `
"<div data-orientation="vertical" data-slot="root">
  <!--v-if-->
  <div data-slot="body" class="">
    <div data-slot="titleWrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <div data-slot="footer" class="">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <div data-slot="terms" class="">Terms</div>
  </div>
</div>"
`;

exports[`PricingPlan > renders with title correctly 1`] = `
"<div data-orientation="vertical" data-slot="root">
  <!--v-if-->
  <div data-slot="body" class="">
    <div data-slot="titleWrapper" class="">
      <div data-slot="title" class="">Title</div>
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;
